--- a/Masar/assets/css/scss/Layouts/_header.scss
+++ b/Masar/assets/css/scss/Layouts/_header.scss
@@ -7,8 +7,9 @@
     .left-box{
         display: flex;
         align-items: center;
+        justify-content: end;
         span{
-            &:nth-child(1){
+            &.number{
             color: var( --text-color-white);
             font-size: 20px;
             font-weight: 600;
@@ -43,17 +44,18 @@
     .right-box{
             display: flex;
             align-items: center;
-            justify-content: space-around;
+            justify-content: start;
             color: var(--text-color-white);
             p{
-                &:nth-child(1){
+                &:nth-child(3){
                     font-size: 18px;
                     font-weight: 700;
                 }
                 &:nth-child(2),
-                &:nth-child(3){
+                &:nth-child(1){
                     font-size: 16px;
                     font-weight: 500;
+                    margin: 0 15px;
                 }
             }
     }
@@ -61,7 +63,7 @@
 
 .middle-heading{
 .logo-img{
-    text-align: end;
+    text-align: start;
     img{
         width: 165.993px;
         height: 130px;
